The "Associations" page was added. And small changes

--- a/associations.html
+++ b/associations.html
@@ -108,150 +108,62 @@
   <div class="container" id="main"  style="min-height: 500px";>
     <div class="col-sm-12">
       <h2>
-        Board
+        List of Associations
       </h2>
       <table class="table">
         <tbody>
           <tr>
-            <td>President:</td>
-            <td>Stefania Serafin</td>
+            <td><a href=http://www.emf.org/>Electronic Music Foundation (EMF)</a></td>
           </tr>
           <tr>
-            <td>Conference Coordinator:</td>
-            <td>Federico Avanzini</td>
+            <td><a href=http://www.aimi-musica.org/>Associazione Italiana di Informatica Musicale (AIMI) </a></td>
           </tr>
           <tr>
-            <td>Summer School Coordinator:</td>
-            <td>Romain Michon</td>
+            <td><a href=http://www.afim-asso.org/>Association Française d'Informatique Musicale (AFIM)</a></td>
           </tr>
           <tr>
-            <td>Communication Coordinator:</td>
-            <td>Amalia De Goetzen</td>
+            <td><a href=http://www.degem.de/>Deutsche Gesellschaft für Elektroakustische Musik (DEGEM) </a></td>
           </tr>
           <tr>
-            <td>Web Coordinator:</td>
-            <td>Fotis Moschos</td>
+            <td><a href=http://asa.aip.org/>Acoustical Society of America (ASA) </a></td>
           </tr>
           <tr>
-            <td>Music Coordinator:</td>
-            <td> Juraj Kojs</td>
+            <td><a href=http://www.signalprocessingsociety.org/>IEEE Signal Processing Society </a></td>
           </tr>
           <tr>
-            <td>Exhibitions Coordinator:</td>
-            <td>Spencer Topel</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <div class="container" style="height: 15px";>  </div>
-
-      <p>
-        The SMC <b>Steering Committee</b> includes members from several European countries:
-      </p>
-      <table class="table">
-        <tbody>
-          <tr>
-            <td style="background: #006580;color: white"; ><b>France</b></td>
+            <td><a href=http://www.acm.org/>Association for Computing Machinery (ACM)</a></td>
           </tr>
           <tr>
-            <td>Myriam Desainte-Catherine</td>
+            <td><a href=http://www.acma.asn.au/>Australasian Computer Music Association (ACMA) </a></td>
           </tr>
           <tr>
-            <td>Dominique Fober</td>
+            <td><a href=http://cec.concordia.ca/>Canadian Electroacoustic Community (CEC)</a></td>
           </tr>
           <tr>
-            <td>Gérard Assayag</td>
+            <td><a href=http://www.ismir.net/>International Society for Music Information Retrieval (ISMIR) </a></td>
           </tr>
           <tr>
-            <td>Yann Orlarey</td>
+            <td><a href=http://www.icad.org/>International Community for Auditory Display (ICAD) </a></td>
           </tr>
           <tr>
-            <td style="background: #006580;color: white"; ><b>Italy</b></td>
+            <td><a href=http://www.eurasip.org/>European Association for Signal Processing (EURASIP) </a></td>
           </tr>
           <tr>
-            <td>Davide Rocchesso</td>
+            <td><a href=http://www.ems-network.org/>Electroacoustic Music Studies Network (EMS) </a></td>
           </tr>
           <tr>
-            <td>Ricardo Dapello</td>
+            <td><a href=http://www.computermusic.org/>International Computer Music Association (ICMA) </a></td>
           </tr>
           <tr>
-            <td>Federico Avanzini</td>
+            <td><a href=http://www.smcm-net.info/>Society for Mathematics and Computation in Music (SMCM)</a></td>
           </tr>
           <tr>
-            <td>Pietro Polotti</td>
-          </tr>
-          <tr>
-            <td style="background: #006580;color: white"; ><b>Greece</b></td>
-          </tr>
-          <tr>
-            <td>Anastasia Georgaki</td>
-          </tr>
-          <tr>
-            <td>Ioannis Zannos</td>
-          </tr>
-          <tr>
-            <td style="background: #006580;color: white"; ><b>Germany</b></td>
-          </tr>
-          <tr>
-            <td>Michael Harenberg</td>
-          </tr>
-          <tr>
-            <td>Martin Supper</td>
-          </tr>
-          <tr>
-            <td>Stefan Weinzierl</td>
-          </tr>
-          <tr>
-            <td>Martin Schüttler</td>
-          </tr>
-          <tr>
-            <td style="background: #006580;color: white"; ><b>Spain</b></td>
-          </tr>
-          <tr>
-            <td>Xavier Serra</td>
-          </tr>
-          <tr>
-            <td>Emilia Gomez</td>
-          </tr>
-          <tr>
-            <td style="background: #006580;color: white"; ><b>Portugal</b></td>
-          </tr>
-          <tr>
-            <td>Fabien Gouyon</td>
-          </tr>
-          <tr>
-            <td>Carlos Guedes</td>
-          </tr>
-          <tr>
-            <td>Alvaro Barbosa</td>
-          </tr>
-          <tr>
-            <td style="background: #006580;color: white"; ><b>Denmark</b></td>
-          </tr>
-          <tr>
-            <td>Stefania Serafin</td>
-          </tr>
-          <tr>
-            <td>Jan Larsen</td>
-          </tr>
-          <tr>
-            <td style="background: #006580;color: white"; ><b>Sweden</b></td>
-          </tr>
-          <tr>
-            <td>Roberto Bresin</td>
-          </tr>
-          <tr>
-            <td style="background: #006580;color: white"; ><b>Denmark</b></td>
-          </tr>
-          <tr>
-            <td>Simon Dixon</td>
+            <td><a href=http://www.escom.org/>European Society for the Cognitive Sciences of Music (ESCOM) </a></td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
-
-
 
   <div class="container" id="main">
   <div class="panel-footer panel-custom">Sound and Music Computing Network</div>
