--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#">Centers</a>
-            <a class="dropdown-item" href="#">Associations</a>
+            <a class="dropdown-item" href="associations.html">Associations</a>
             <a class="dropdown-item" href="#">Journals</a>
             <a class="dropdown-item" href="#">Conferences</a>
             <a class="dropdown-item" href="#">Software</a>
@@ -105,7 +105,7 @@
 
   <div class="container" style="height: 15px";>  </div>
 
-  <div class="container" id="main"  style="height: 500px";>
+  <div class="container" id="main"  style="min-height: 500px";>
     <div class="col-sm-12">
       <h2>
         Sound and Music Computing
