--- a/connected.html
+++ b/connected.html
@@ -92,7 +92,7 @@
           </a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#">Centers</a>
-            <a class="dropdown-item" href="#">Associations</a>
+            <a class="dropdown-item" href="associations.html">Associations</a>
             <a class="dropdown-item" href="#">Journals</a>
             <a class="dropdown-item" href="#">Conferences</a>
             <a class="dropdown-item" href="#">Software</a>
