--- a/board.html
+++ b/board.html
@@ -27,23 +27,44 @@
     color: white;
     text-align: center;
   }
+
+  .scrollspy-example {
+  position: relative;
+  height: 250px;
+  overflow: auto;
+  }
+
+  .nav-pills > li > a.active {
+    background-color: #006580!important;
+  }
+
+  .nav-pills .nav-link:not(.active) {
+    color: #006580;
+  }
+
+  .jumbotron {
+    background-image: url("smc_circles.png");
+    background-size: cover;
+    color: white;
+    margin: 0;
+    border-radius: 0 !important;
+    }
+
 </style>
 
 </head>
 <body>
-
   <div class="container">
-    <h1>
-      <a href="index.html" title="Sound and Music Computing Network" class="text-body" style="text-decoration: none">
-        Sound and Music Computing Network
-      </a>
-    </h1>
 
-    <img class="img-fluid w-100" src="smc_circles.png" alt="SMC_Circles">
+    <a href="index.html" style="text-decoration: none;">
+      <div class="jumbotron">
+        <h1>Sound and Music Computing Network</h1>
+      </div>
+    </a>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
-      <ul class="navbar-nav">
+      <ul class="navbar-nav nav-fill w-100">
 
         <li class="nav-item">
           <a class="nav-link" href="#">News</a>
@@ -78,9 +99,9 @@
             Roadmap
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Scenarios</a>
-            <a class="dropdown-item" href="#">Definition</a>
-            <a class="dropdown-item" href="#">Context</a>
+            <a class="dropdown-item" href="scenarios.html">Scenarios</a>
+            <a class="dropdown-item" href="definition.html">Definition</a>
+            <a class="dropdown-item" href="context.html">Context</a>
             <a class="dropdown-item" href="#">Challenges</a>
             <a class="dropdown-item" href="#">Conclusions</a>
           </div>
@@ -103,13 +124,14 @@
     </nav>
   </div>
 
+
   <div class="container" style="height: 15px";>  </div>
 
   <div class="container" id="main"  style="min-height: 500px";>
     <div class="col-sm-12">
-      <h2>
+      <h1>
         Board
-      </h2>
+      </h1>
       <table class="table">
         <tbody>
           <tr>
