Centers + Conferences + Journals
Centers + Conferences + Journals pagers were added

--- a/associations.html
+++ b/associations.html
@@ -112,10 +112,10 @@
             Resources
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Centers</a>
+            <a class="dropdown-item" href="centers.html">Centers</a>
             <a class="dropdown-item" href="associations.html">Associations</a>
-            <a class="dropdown-item" href="#">Journals</a>
-            <a class="dropdown-item" href="#">Conferences</a>
+            <a class="dropdown-item" href="journals.html">Journals</a>
+            <a class="dropdown-item" href="conferences.html">Conferences</a>
             <a class="dropdown-item" href="#">Software</a>
             <a class="dropdown-item" href="#">NordicSMC</a>
           </div>
