--- a/journals.html
+++ b/journals.html
@@ -127,17 +127,78 @@
 
   <div class="container" style="height: 15px";>  </div>
 
-  <div class="container" id="main"  style="height: 500px";>
+  <div class="container" id="main"  style="min-height: 500px";>
     <div class="col-sm-12">
       <h1>
-        Stay connected!
+        List of Academic Journals
       </h1>
-      <p>
-        If you want to be updated on SMC activities, subscribe to the mailing
-        list of SMCNETWORK by sending an email to mtg-info@upf.edu.
-        <br /><br />
-        You can also subscribe to our <a href=https://www.facebook.com/smcnetorg>facebook page</a>.
-      </p>
+      <table class="table">
+        <tbody>
+          <tr>
+            <td><a href=http://ojs.vre.upei.ca/index.php/psychomusicology>Psychomusicology: Music, Mind and Brain </a></td>
+          </tr>
+          <tr>
+            <td><a href=http://tomccap.acm.org/>ACM Transactions on Multimedia Computing, Communications, and Applications</a></td>
+          </tr>
+          <tr>
+            <td><a href=http://www.acta-acustica-united-with-acustica.com/>Acta Acustica united with Acustica</a></td>
+          </tr>
+          <tr>
+            <td><a href=http://www.mitpressjournals.org/cmj>Computer Music Journal</a></td>
+          </tr>
+          <tr>
+            <td><a href=http://www.computer.org/portal/site/multimedia>IEEE Multimedia Magazine </a></td>
+          </tr>
+          <tr>
+            <td><a href=http://www.signalprocessingsociety.org/publications/periodicals/spm/>IEEE Signal Processing Magazine</a></td>
+          </tr>
+          <tr>
+            <td><a href=http://www.signalprocessingsociety.org/publications/periodicals/taslp/>IEEE Transactions on Audio, Speech and Language Processing</a></td>
+          </tr>
+          <tr>
+            <td><a href=http://www.musicstudies.org/>Journal of Interdisciplinary Music Studies </a></td>
+          </tr>
+          <tr>
+            <td><a href=http://www.tandf.co.uk/journals/titles/09298215.asp>Journal of New Music Research</a></td>
+          </tr>
+          <tr>
+            <td><a href=http://asadl.org/jasa/>Journal of the Acoustical Society of America </a></td>
+          </tr>
+          <tr>
+            <td><a href=http://www.aes.org/journal/>Journal of the Audio Engineering Society </a></td>
+          </tr>
+          <tr>
+            <td><a href=http://leonardo.info/lmj/>Leonardo Music Journal </a></td>
+          </tr>
+          <tr>
+            <td><a href=https://www.ucpress.edu/journals>Music Perception </a></td>
+          </tr>
+          <tr>
+            <td><a href=https://www.cambridge.org/core/journals/organised-sound>Organised Sound</a></td>
+          </tr>
+          <tr>
+            <td><a href=http://asmp.eurasipjournals.com/>EURASIP Journal on Audio, Speech, and Music Processing </a></td>
+          </tr>
+          <tr>
+            <td><a href=http://msx.sagepub.com/>Musicae Scientiae</a></td>
+          </tr>
+          <tr>
+            <td><a href=http://www.tandfonline.com/toc/tmam20/current>Journal of Mathematics and Music </a></td>
+          </tr>
+          <tr>
+            <td><a href=http://www.ijournalcc.com/>International Journal of Contemporary Composition</a></td>
+          </tr>
+          <tr>
+            <td><a href=http://jcms.org.uk/>Journal of Creative Music Systems</a></td>
+          </tr>
+          <tr>
+            <td><a href=http://tismir.ismir.net/>Transactions of the International Society for Music Information Retrieval </a></td>
+          </tr>
+          <tr>
+            <td><a href=https://us.sagepub.com/en-us/nam/music-science/journal202491>Music & Science </a></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 
