--- a/associations.html
+++ b/associations.html
@@ -54,7 +54,7 @@
 
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid" style="padding: 0">
 
     <a href="index.html" style="text-decoration: none;">
       <div class="jumbotron">
@@ -116,7 +116,7 @@
             <a class="dropdown-item" href="associations.html">Associations</a>
             <a class="dropdown-item" href="journals.html">Journals</a>
             <a class="dropdown-item" href="conferences.html">Conferences</a>
-            <a class="dropdown-item" href="#">Software</a>
+            <a class="dropdown-item" href="software.html">Software</a>
             <a class="dropdown-item" href="#">NordicSMC</a>
           </div>
         </li>
@@ -125,9 +125,9 @@
   </div>
 
 
-  <div class="container" style="height: 15px";>  </div>
+  <div class="container-fluid" style="height: 15px";>  </div>
 
-  <div class="container" id="main"  style="min-height: 500px";>
+  <div class="container-fluid" id="main"  style="min-height: 500px";>
     <div class="col-sm-12">
       <h1>
         List of Associations
@@ -187,7 +187,7 @@
     </div>
   </div>
 
-  <div class="container" id="main">
+  <div class="container-fluid" id="main">
   <div class="panel-footer panel-custom">Sound and Music Computing Network</div>
   </div>
 
