--- a/board.html
+++ b/board.html
@@ -54,7 +54,7 @@
 
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid" style="padding: 0">
 
     <a href="index.html" style="text-decoration: none;">
       <div class="jumbotron">
@@ -116,7 +116,7 @@
             <a class="dropdown-item" href="associations.html">Associations</a>
             <a class="dropdown-item" href="journals.html">Journals</a>
             <a class="dropdown-item" href="conferences.html">Conferences</a>
-            <a class="dropdown-item" href="#">Software</a>
+            <a class="dropdown-item" href="software.html">Software</a>
             <a class="dropdown-item" href="#">NordicSMC</a>
           </div>
         </li>
