--- a/conf.html
+++ b/conf.html
@@ -127,84 +127,47 @@
 
   <div class="container" style="height: 15px";>  </div>
 
-  <div class="container" id="main"  style="min-height: 500px";>
+  <div class="container" id="main"  style="min-height: 600px";>
     <div class="col-sm-12">
       <h1>
-        List of Academic Conferences
+        Current and past editions
       </h1>
-      <table class="table">
-        <tbody>
-          <tr>
-            <td><a href=http://www.sigmm.org/view_conference>ACM International Conference on Multimedia Retrieval (ICMR)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.sigmm.org/view_conference>ACM Multimedia International Conference </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.sigir.org/>ACM Special Interest Group on Information Retrieval (SIGIR) Conference </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.aes.org/events/conventions/>AES Conventions </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.aes.org/events/conferences/>AES International Conferences </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://atmm-conference.org/>Audio Technologies for Music and Media (ATMM) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://acma.asn.au/conferences/>Australasian Computer Music Conference (ACMC) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.idmusicology.com/cim/index2.htm>Conference on Interdisciplinary Musicology (CIM) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.ems-network.org/spip.php?rubrique19>EMS Network Conference </a></td>
-          </tr>
-          <tr>
-            <td><a href=https://tinyurl.com/yb72zqf4>European Signal Processing Conference (EUSIPCO) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.signalprocessingsociety.org/technical-committees/list/audio-tc/conferences-and-workshops/>IEEE Int. Conf. on Acoustics, Speech and Signal Processing (ICASSP)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.signalprocessingsociety.org/technical-committees/list/mmsp-tc/conferences-workshops/>IEEE International Workshop on Multimedia Signal Processing (MMSP)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.signalprocessingsociety.org/technical-committees/list/audio-tc/conferences-and-workshops/>IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.computermusic.org/page/23/>International Computer Music Conference (ICMC) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.icmpc.org/conferences.html>International Conference of Music Perception and Cognition (ICMPC) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.icad.org/conferences>International Conference on Auditory Display (ICAD)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.dafx.de/>International Conference on Digital Audio Effects (DAFX)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.smcm-net.info/>International Conference on Mathematics and Computation in Music (MCM) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.nime.org/>International Conference on New Interfaces for Musical Expression (NIME)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.ismir.net/>International Society for Music Information Retrieval Conference (ISMIR) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://lac.linuxaudio.org/>Linux Audio Conference (LAC) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://acousticalsociety.org/meetings>Meetings of the Acoustical Society of America </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.smc-conference.org/>Sound and Music Computing Conference (SMC) </a></td>
-          </tr>
-        </tbody>
-      </table>
+      <p>
+         The SMC Conference is a double-blind peer-reviewed international scientific conference around the core interdisciplinary topics of Sound and Music Computing.
+         <br /><br />
+         The proceedings of SMC are registered with ISSN 2518-3672.
+         <br /><br />
+         The next SMC conference will take place in <a href="http://smc2019.uma.es">Malaga</a>.
+         <br /><br />
+         The SMC Conferences are jointly supervised by:
+         <ul>
+          <li><a href="http://www.afim-asso.org/">AFIM</a> (Association Française d'Informatique Musicale)</li>
+          <li><a href="http://www.aimi-musica.org/">AIMI</a> (Associazione Italiana di Informatica Musicale)</li>
+          <li><a href="http://www.degem.de/">DEGEM</a> (Deutsche Gesellschaft für Elektroakustische Musik)</li>
+          <li>HACI (Hellenic Association of Music Informatics)</li>
+          <li><a href="http://smcnetwork.org/SITEMU">SITEMU</a> (Sociedad(e) Ibérica de TEcnología MUsical)</li>
+        </ul>
+      </p>
+      <h4>Past SMC Conferences</h4>
+      <p>
+        <ul>
+          <li><a href="http://cyprusconferences.org/smc2018/">SMC 2018</a> in Limassol, Cyprus, from July 4 to July 7, 2018.</li>
+          <li><a href="http://smc2017.aalto.fi/">SMC 2017</a> in Helsinki, Finland, from July 1 to July 4, 2017.</li>
+          <li><a href="https://smc2016.hfmt-hamburg.de/">SMC 2016</a> in Hamburg, Germany, from August 31 to September 3, 2016.</li>
+          <li><a href="http://www.maynoothuniversity.ie/smc15">SMC 2015</a> in Maynooth, Ireland, from July 30th to August 1st, 2015. </li>
+          <li><a href="http://www.icmc14-smc14.eu/">SMC 2014 (joint with ICMC)</a> in Athens, Greece, from September 14 to September 20, 2014.</li>
+          <li><a href="http://smc2013.smcnetwork.org/">SMC 2013</a> in Stockholm, Sweden, from July 30 to August 3, 2013.</li>
+          <li><a href="http://smc2012.smcnetwork.org/">SMC 2012</a> in Copenhangen, Denmark, from July 12 to July 14, 2012.</li>
+          <li><a href="http://smc2011.smcnetwork.org/">SMC 2011</a> in Padova, Italy, from July 6 to July 9, 2011.</li>
+          <li><a href="http://smc2010.smcnetwork.org/">SMC 2010</a> in Barcelona, Spain, from July 18 to July 23, 2010</li>
+          <li><a href="http://smc2009.smcnetwork.org/">SMC 2009</a> in Porto, Portugal, from July 23 to July 25, 2009.</li>
+          <li><a href="http://smc.afim-asso.org/smc08/">SMC 2008</a> in Berlin, Germany, from July 31 to August 3, 2008.</li>
+          <li><a href="http://smc.afim-asso.org/smc07/">SMC 2007</a> in Athens, Greece, from July 11 to July 13, 2007.</li>
+          <li><a href="http://smc.afim-asso.org/smc06/">SMC 2006</a> in Marseille, France, from May 18 to May 19, 2006.</li>
+          <li><a href="http://smc.afim-asso.org/smc05/">SMC 2005</a> in Salerno, Italy, from November 24 to November 26, 2005.</li>
+          <li><a href="http://smc.afim-asso.org/smc04/">SMC 2004</a> in Paris, France, from October 20 to October 22, 2004.</li>
+        </ul>
+      </p>
     </div>
   </div>
 
