--- a/journals.html
+++ b/journals.html
@@ -86,11 +86,11 @@
             SMC Summer School & Conference
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">How to host SMC</a>
-            <a class="dropdown-item" href="#">Current and past editions</a>
-            <a class="dropdown-item" href="#">SMC precedings</a>
+            <a class="dropdown-item" href="host.html">How to host SMC</a>
+            <a class="dropdown-item" href="conf.html">Current and past editions</a>
+            <a class="dropdown-item" href="proceedings.html">SMC proceedings</a>
             <a class="dropdown-item" href="#">Ethic Statements</a>
-            <a class="dropdown-item" href="#">SMC Summer School</a>
+            <a class="dropdown-item" href="school.html">SMC Summer School</a>
           </div>
         </li>
 
