--- a/school.html
+++ b/school.html
@@ -127,84 +127,32 @@
 
   <div class="container" style="height: 15px";>  </div>
 
-  <div class="container" id="main"  style="min-height: 500px";>
+  <div class="container" id="main"  style="min-height: 600px";>
     <div class="col-sm-12">
       <h1>
-        List of Academic Conferences
+        SMC summer school
       </h1>
-      <table class="table">
-        <tbody>
-          <tr>
-            <td><a href=http://www.sigmm.org/view_conference>ACM International Conference on Multimedia Retrieval (ICMR)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.sigmm.org/view_conference>ACM Multimedia International Conference </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.sigir.org/>ACM Special Interest Group on Information Retrieval (SIGIR) Conference </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.aes.org/events/conventions/>AES Conventions </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.aes.org/events/conferences/>AES International Conferences </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://atmm-conference.org/>Audio Technologies for Music and Media (ATMM) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://acma.asn.au/conferences/>Australasian Computer Music Conference (ACMC) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.idmusicology.com/cim/index2.htm>Conference on Interdisciplinary Musicology (CIM) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.ems-network.org/spip.php?rubrique19>EMS Network Conference </a></td>
-          </tr>
-          <tr>
-            <td><a href=https://tinyurl.com/yb72zqf4>European Signal Processing Conference (EUSIPCO) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.signalprocessingsociety.org/technical-committees/list/audio-tc/conferences-and-workshops/>IEEE Int. Conf. on Acoustics, Speech and Signal Processing (ICASSP)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.signalprocessingsociety.org/technical-committees/list/mmsp-tc/conferences-workshops/>IEEE International Workshop on Multimedia Signal Processing (MMSP)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.signalprocessingsociety.org/technical-committees/list/audio-tc/conferences-and-workshops/>IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.computermusic.org/page/23/>International Computer Music Conference (ICMC) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.icmpc.org/conferences.html>International Conference of Music Perception and Cognition (ICMPC) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.icad.org/conferences>International Conference on Auditory Display (ICAD)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.dafx.de/>International Conference on Digital Audio Effects (DAFX)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.smcm-net.info/>International Conference on Mathematics and Computation in Music (MCM) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.nime.org/>International Conference on New Interfaces for Musical Expression (NIME)</a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.ismir.net/>International Society for Music Information Retrieval Conference (ISMIR) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://lac.linuxaudio.org/>Linux Audio Conference (LAC) </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://acousticalsociety.org/meetings>Meetings of the Acoustical Society of America </a></td>
-          </tr>
-          <tr>
-            <td><a href=http://www.smc-conference.org/>Sound and Music Computing Conference (SMC) </a></td>
-          </tr>
-        </tbody>
-      </table>
+      <p>
+        The Sound and Music Computing summer school promotes interdisciplinary education and research in the field of Sound and Music Computing. It is aimed at graduate students working on their Master or PhD thesis, but it is also open to any person carrying out research in this field.
+        <br /><br />
+        While the two first editions the Summer School (<a href="http://smcnetwork.org/summer_school/genova2005">Genova 2005</a> and <a href="http://smcnetwork.org/summer_school/barcelona2006">Barcelona 2006</a>) were sponsored and organized by the S2S² EU project, from then on they are self-maintained and organized in the context of the <a href="conf.html">SMC Conference</a>.
+        <ul>
+          <li><a href="http://cyprusconferences.org/smc2018/summerschool.html">Limassol, 2018</a></li>
+          <li><a href="http://smc2017.aalto.fi/summer_school.html">Helsinki, 2017</a></li>
+          <li><a href="https://smc2016.hfmt-hamburg.de/index.php/summer-school">Hambourg, 2016</a></li>
+          <li><a href="http://www.maynoothuniversity.ie/smc15/summerschool.html">Maynooth 2015</a></li>
+          <li><a href="http://www.icmc14-smc14.net/program/conference-program/summer-school.html">Athens 2014</a></li>
+          <li><a href="http://smacsmc2013.smcsweden.se/summerschool.html">Stockholm 2013</a></li>
+          <li><a href="http://smc2012.smcnetwork.org/summer-school/">Copenhagen 2012</a></li>
+          <li><a href="http://smcnetwork.org/summer_school/padova2011">Padova 2011</a></li>
+          <li><a href="http://smcnetwork.org/summer_school/barcelona2010">Barcelona 2010</a></li>
+          <li><a href="http://smcnetwork.org/summerschool/porto2009">Porto 2009</a></li>
+          <li><a href="http://smcnetwork.org/summer_school/genova2008">Genova 2008</a></li>
+          <li><a href="http://smcnetwork.org/summer_school/stockholm2007">Stockholm 2007</a></li>
+          <li><a href="http://smcnetwork.org/summer_school/barcelona2006">Barcelona 2006</a></li>
+          <li><a href="http://smcnetwork.org/summer_school/genova2005">Genova 2005</a></li>
+        </ul>
+      </p>
     </div>
   </div>
 
