--- a/NordicSMC.html
+++ b/NordicSMC.html
@@ -103,7 +103,7 @@
             <a class="dropdown-item" href="definition.html">Definition</a>
             <a class="dropdown-item" href="context.html">Context</a>
             <a class="dropdown-item" href="#">Challenges</a>
-            <a class="dropdown-item" href="#">Conclusions</a>
+            <a class="dropdown-item" href="conclusions.html">Conclusions</a>
           </div>
         </li>
 
@@ -117,11 +117,32 @@
             <a class="dropdown-item" href="journals.html">Journals</a>
             <a class="dropdown-item" href="conferences.html">Conferences</a>
             <a class="dropdown-item" href="software.html">Software</a>
-            <a class="dropdown-item" href="#">NordicSMC</a>
+            <a class="dropdown-item" href="NordicSMC.html">NordicSMC</a>
           </div>
         </li>
       </ul>
     </nav>
+  </div>
+
+
+  <div class="container" style="height: 15px";>  </div>
+
+  <div class="container" id="main"  style="min-height: 600px";>
+        <h1>
+          Nordic Sound and Music Computing Network
+        </h1>
+        <p>
+          The Nordic Sound and Music Computing Network (NordicSMC) brings together a group of internationally leading sound and music computing researchers from all five Nordic countries, from Aalborg University (AAU), Aalto University (AALTO), KTH Royal Institute of Technology (KTH), University of Iceland (UoI), and University of Oslo (UiO).
+          <br /><br />
+          The constellation is unique in that the network covers the field of sound and music from the “soft” to the “hard,” including the arts and humanities, the social and natural sciences, and with a high level of technological competency.
+          <br /><br />
+          For more information see: <a href="nordicsmc.create.aau.dk">nordicsmc.create.aau.dk</a>
+        </p>
+
+      </div>
+
+  <div class="container" id="main">
+  <div class="panel-footer panel-custom">Sound and Music Computing Network</div>
   </div>
 
 </body>
